Ajout des modifications CSS tableau et script Javascript pour voir les mots de passe.

--- a/src/site/private_html/css/darties.css
+++ b/src/site/private_html/css/darties.css
@@ -55,6 +55,7 @@ table.table tfoot th {
 table.table tbody td,
 table.table tfoot td {
   text-align:left;
+  vertical-align: middle;
 }
 table.table tfoot tr {
   background: #F5F5F5;
