--- a/src/site/templates/macro/loginError/formMotDePasse.html
+++ b/src/site/templates/macro/loginError/formMotDePasse.html
@@ -24,28 +24,22 @@
       <div class="col-md-4 col-md-offset-4">
         <div class="login-panel panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title"><img src="{{ urlPath }}/img/logo_100.png" height="32px" />&nbsp;&nbsp;Connexion</h3>
+            <h3 class="panel-title"><img src="{{ urlPath }}/img/logo_100.png" height="32px" />&nbsp;&nbsp;Opération de récuperation</h3>
           </div>
           <div class="panel-body">
-            <form role="form" action="{{ urlPath }}/index.php/login" method="post">
+            <form role="form" action="{{ urlPath }}/index.php/newPassword" method="post">
               <fieldset>
                 <div class="form-group">
                   <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
                 </div>
-                <div class="form-group">
-                  <input class="form-control" placeholder="Mot de passe" name="mdp" type="password" value="">
-                </div>
-                <button class="btn btn-success btn-block">Connexion</button>
+                <button class="btn btn-success btn-block">Envoyer demande</button>
               </fieldset>
             </form>
             <br>
-			<ul>
-			  <li>Admin|javier.audibert@darties.com|4AfgG97</li>
-			  <li>Commercial|dominic.drouin@darties.com|t2eJ76Z</li>
-			  <li>Region|angelique.delaunay@darties.com|g6Gb25T</li>
-			  <li>Magasin|estelle.bernier@darties.com|CJ62hy9</li>
-			</ul>
-          </div>
+            {% if error == "NoMail" %}
+                <p style="color:red; text-align:center; font-weight: bold;">L'email spécifié n'existe pas.</p>
+            {% endif %}
+            </div>
         </div>
       </div>
     </div>
