--- a/src/site/templates/login.html
+++ b/src/site/templates/login.html
@@ -27,7 +27,7 @@
             <h3 class="panel-title"><img src="{{ urlPath }}/img/logo_100.png" height="32px" />&nbsp;&nbsp;Connexion</h3>
           </div>
           <div class="panel-body">
-            <form role="form" action="{{ urlPath }}/index.php/login" method="post">
+            <form role="form" action="{{ urlPath }}/index.php/connection" method="post">
               <fieldset>
                 <div class="form-group">
                   <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
