Ajout modif password et get(user/profil)

--- a/src/site/templates/macro/testwebservice/newpasswordform.html
+++ b/src/site/templates/macro/testwebservice/newpasswordform.html
@@ -24,18 +24,15 @@
       <div class="col-md-4 col-md-offset-4">
         <div class="login-panel panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title"><img src="{{ urlPath }}/img/logo_100.png" height="32px" />&nbsp;&nbsp;Connexion</h3>
+            <h3 class="panel-title"><img src="{{ urlPath }}/img/logo_100.png" height="32px" />&nbsp;&nbsp;Connexion Webservice</h3>
           </div>
           <div class="panel-body">
-            <form role="form" action="{{ urlPath }}/index.php/login" method="post">
+            <form role="form" action="{{ urlPath }}/index.php/update" method="post">
               <fieldset>
                 <div class="form-group">
-                  <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
+                  <input class="form-control" placeholder="Mot de passe" name="password" type="password" value="">
                 </div>
-                <div class="form-group">
-                  <input class="form-control" placeholder="Mot de passe" name="mdp" type="password" value="">
-                </div>
-                <button class="btn btn-success btn-block">Connexion</button>
+                <button class="btn btn-success btn-block">Nouveau mot de passe</button>
               </fieldset>
             </form>
             <br>
