--- a/src/site/templates/macro/testwebservice/login.html
+++ b/src/site/templates/macro/testwebservice/login.html
@@ -24,10 +24,10 @@
       <div class="col-md-4 col-md-offset-4">
         <div class="login-panel panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title"><img src="{{ urlPath }}/img/logo_100.png" height="32px" />&nbsp;&nbsp;Connexion</h3>
+            <h3 class="panel-title"><img src="{{ urlPath }}/img/logo_100.png" height="32px" />&nbsp;&nbsp;Connexion Webservice</h3>
           </div>
           <div class="panel-body">
-            <form role="form" action="{{ urlPath }}/index.php/login" method="post">
+            <form role="form" action="{{ urlPath }}/index.php/connection" method="post">
               <fieldset>
                 <div class="form-group">
                   <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
